--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,8 +16,8 @@
     <main>
 
         <form class="add-form">
-            <input type="text" placeholder="Adicionar tarefa" class="input-task" />
-            <button type="button"> + </button>
+            <input type="text" placeholder="Adicionar tarefa" class="input-task input-style" />
+            <button type="submit" class="button-plus"> + </button>
         </form>
 
         <table>
@@ -36,7 +36,7 @@
                     <td> Título da task </td>
                     <td> 00 de Janeiro de 2024 12:00 </td>
                     <td>
-                        <select>
+                        <select class="options-status">
                             <option value="pendente"> pendente </option>
                             <option value="em andamento"> em andamento </option>
                             <option value="concluída"> concluída </option>
