--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,8 +16,8 @@
     <main>
 
         <form class="add-form">
-            <input type="text" placeholder="Adicionar tarefa" class="input-task input-style" />
-            <button type="submit" class="button-plus"> + </button>
+            <input type="text" placeholder="Adicionar tarefa" class="input-task" />
+            <button type="submit"> + </button>
         </form>
 
         <table>
@@ -32,11 +32,11 @@
             </thead>
 
             <tbody>
-                <tr>
+                <!-- <tr>
                     <td> Título da task </td>
                     <td> 00 de Janeiro de 2024 12:00 </td>
                     <td>
-                        <select class="options-status">
+                        <select>
                             <option value="pendente"> pendente </option>
                             <option value="em andamento"> em andamento </option>
                             <option value="concluída"> concluída </option>
@@ -50,7 +50,7 @@
                             <span class="material-symbols-outlined"> delete </span>
                         </button>
                     </td>
-                </tr>
+                </tr> -->
             </tbody>
 
         </table>
